Fix crash during game over

Add condition to check if Manager::gameOver was not called already.

BUG: 481546